fix: hide scrollbar locally

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,8 +18,8 @@ html {
 @tailwind utilities;
 
 @layer base {
-    *::-webkit-scrollbar {
-        display: none;
+    .carousel::-webkit-scrollbar {
+        @apply hidden;
     }
 
     * {
